apps/media-stack/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: media-stack
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-prod
spec:
  ingressClassName: openshift-default
  tls:
  - hosts:
    - plex.sigtom.dev
    - overseerr.sigtom.dev
    - sonarr.sigtom.dev
    - radarr.sigtom.dev
    - sabnzbd.sigtom.dev
    - bazarr.sigtom.dev
    - rdt-client.sigtom.dev
    - zurg.sigtom.dev
    - riven.sigtom.dev
    secretName: media-sigtom-tls
  rules:
  - host: plex.sigtom.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-service
            port:
              number: 32400
  - host: overseerr.sigtom.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              number: 5055
  - host: sonarr.sigtom.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
  - host: radarr.sigtom.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
  - host: sabnzbd.sigtom.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 8080
  - host: bazarr.sigtom.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 6767
  - host: rdt-client.sigtom.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rdt-client
            port:
              number: 6500
  - host: zurg.sigtom.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zurg
            port:
              number: 9999
  - host: riven.sigtom.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: riven
            port:
              number: 80
